--- a/bubbles/bubbles.css
+++ b/bubbles/bubbles.css
@@ -2,6 +2,7 @@ body {
 
     background-color: rgb(237, 213,133) ;
     height: 100vh;
+    overflow: hidden;
 
 
 }
@@ -14,18 +15,52 @@ to { transform: translateY(-5vh) scale(2);
 
 }
 
+
+@keyframes float {
+    25% { transform: rotate(3deg) translate(0.5em, 0.5em);
+     
+    }
+
+    50% { transform: rotate(3deg) translate(0em, 1em);
+    }
+    
+    75% { transform: rotate(3deg) translate(-0.5em, 0.5em); } 
+
+
+
+
+}
+
 .bubble { 
-    height: 0.5em;
-    width: 0.5cm;
+  
     position: absolute;
     border-color: violet;
     border-width: 1px;
     border-style: solid;
     border-radius: 50%;
-    transform: translateY(90vh);
+    transform: translateY(110vh);
     animation-name: bubble;
     animation-duration: 3s;
     animation-delay: 5ms;
     animation-timing-function: linear;
+    animation-iteration-count: infinite;
+
+}
+
+img {
+
+    display: block;
+    position: absolute;
+    top: 50vh;
+    left: 45vw;
+    height: 50vh;
+    z-index: 1;
+    animation-name: float;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    animation-timing-function: linear;
+
+
 
 }
