--- a/speed/speed.css
+++ b/speed/speed.css
@@ -1,44 +1,29 @@
 body {
-    
-    
-    
-    
-    
-    
-display: flex;
-height: 100vh;
-justify-content: center;
-align-items:center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-input [type="button"] {
-
-background-color: darkturquoise;
-color: floralwhite;
-border-radius: 10%;
-border-style: none;
-font-size: 1.5em;
-padding: 0.5 1em;
-
+input[type="button"] {
+    background-color: seagreen;
+    color: white;
+    border-radius: 10%;
+    border-style: none;
+    font-size: 1.5em;
+    padding: 0.5em 1em;
 }
-
-
 .letter {
-
-position: absolute;
-/* top: 10em;
-right: 10em;
-background-color: salmon; */
-padding: 0.5em;
-border-radius: 10%;
-font-family: monospace;
-font-size: 1.5em;
-color: powderblue;
-
-
+    position: absolute;
+    /* top: 10em;
+    right: 10em;
+    background-color: tomato; */
+    padding: 0.5em;
+    border-radius: 10%;
+    font-family: monospace;
+    font-size: 1.5em;
+    color: rgb(255, 255, 255);
 }
-
-
 .hidden {
     visibility: hidden;
 }
+
