--- a/site/dark.css
+++ b/site/dark.css
@@ -2,7 +2,12 @@
 body {
 
     --back-color: rgb(38, 38, 38);
-    --font-color: rgb(231, 231, 231) }
+    --font-color: rgb(231, 231, 231);
+    --symbol:"\f185";
+
+
+
+}
 
 
 
