--- a/site/light.css
+++ b/site/light.css
@@ -2,5 +2,5 @@
 body {
 
     --back-color: rgb(231, 231, 231);
-    --font-color: rgb(38, 38, 38) }
-
+    --font-color: rgb(38, 38, 38) 
+    --symbol:"\f186";  }
