--- a/site/site.css
+++ b/site/site.css
@@ -42,13 +42,20 @@ text-transform: uppercase;
 
 }
 
-#switch {
+#switch::before {
 
-    font-size: 1.5em em;
+
+    content: var(--symbol);
+    font-size: 1.5em ;
     position: relative;
     top: -0.1em;
     cursor: pointer;
+    font-family: "Font Awesome 5 Free";
 }
+
+
+
+
 
 div {
 
